--- a/Frontend/majorProject/src/App.css
+++ b/Frontend/majorProject/src/App.css
@@ -3,8 +3,8 @@
 #root {
   font-family: 'Poppins';
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
